--- a/ifelse2.0/style.css
+++ b/ifelse2.0/style.css
@@ -147,6 +147,10 @@ button:active {
 }
 
 /* The page-specific styling */
-
+#dancer {
+  position: relative;
+  top: 200px;
+  size: 50px;
+}
 
 /*# sourceMappingURL=style.css.map */
